syntax="proto3";

package grpcservice.laptop;

import "memory_message.proto";

//option go_package = "github.com/vuongle/grpc/pb";
option go_package = ".;pb";

message Filter {
    double max_price_usd = 1;
    uint32 min_cpu_cores = 2;
    double min_cpu_ghz = 3;
    Memory min_ram = 4;
}